# wishlist

./: .gitignore  .pre-commit-config.yaml  REVIEW_CHECKLIST.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: REVIEW_CHECKLIST.md  pull_request_template.md
.github/workflows/: cd.yml  ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
.zap/: zap-baseline.conf
EVIDENCE/P09/: sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: semgrep.sarif
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: hadolint_report.json  hardening_summary.md  trivy_report.json
app/: database.py  main.py  models.py  schemas.py
app/core/: context.py
app/routers/: wishes.py
docker/: Dockerfile  compose.prod.yml  compose.yml
docs/adr/: ADR-001-database.md  ADR-002-client-policies.md  ADR-003-secrets-management.md  ADR-004-normalization.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml 
security/semgrep/: rules.yml
tests/: conftest.py  test_errors.py  test_fix_errors.py  test_fix_headers.py  test_fix_search.py  test_fix_validation.py
