[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv",".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.bandit]
exclude_dirs = ["venv",".venv","tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wishlist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.120.4",
    "pydantic==2.11.9",
    "sqlalchemy==2.0.44",
    "uvicorn==0.30.5",
]

[project.optional-dependencies]
dev = [
    "bandit==1.8.6",
    "httpx==0.28.1",
    "pre-commit==3.8.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.4",
    "build==1.3.0",
    "pip-audit==2.9.0",
]
